[gd_scene load_steps=5 format=3 uid="uid://uht06o48p8ai"]

[ext_resource type="Script" uid="uid://nibnf651w232" path="res://Scripts/cutscene.gd" id="1_6thf7"]
[ext_resource type="Texture2D" uid="uid://x7brjhsa4hu3" path="res://Assets/UI/charactersprites/adrienne_portrait_closedmouth.png" id="2_nii0h"]
[ext_resource type="Texture2D" uid="uid://dr7bpjejh4c1f" path="res://Assets/UI/charactersprites/adrienne_portrait_open mouth.png" id="3_vb7vi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i2stj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nii0h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nii0h")
}, {
"duration": 1.0,
"texture": ExtResource("3_vb7vi")
}],
"loop": true,
"name": &"talk",
"speed": 3.0
}]

[node name="Cutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6thf7")

[node name="Adrienne" type="AnimatedSprite2D" parent="."]
position = Vector2(303, 917)
scale = Vector2(0.916999, 0.916999)
sprite_frames = SubResource("SpriteFrames_i2stj")
animation = &"talk"

[node name="Sonia" type="AnimatedSprite2D" parent="."]

[node name="Astor" type="AnimatedSprite2D" parent="."]

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerTextBox" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 661.0
offset_top = 389.0
offset_right = 1109.0
offset_bottom = 588.0

[node name="PlayerText" type="RichTextLabel" parent="PlayerTextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterTextBox" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 511.0
offset_top = 109.0
offset_right = 1078.0
offset_bottom = 318.0

[node name="CharacterText" type="RichTextLabel" parent="CharacterTextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
